# clarksouls

./: CMakeLists.txt  README.md
src/: FontManager.cpp  FontManager.hpp  IState.cpp  IState.hpp  Includes.hpp  Input.cpp  Input.hpp  Player.cpp  Player.hpp  StateSystem.cpp  StateSystem.hpp  TextureManager.cpp  TextureManager.hpp  dbg.hpp  main.cpp
src/exceptions/: BasicExceptions.hpp  ManagerExceptions.hpp  StateSystemExceptions.cpp  StateSystemExceptions.hpp
src/game_states/: Box2DTestState.cpp  Box2DTestState.hpp  CharTestState.cpp  CharTestState.hpp  GameState.cpp  GameState.hpp  InputTestState.cpp  InputTestState.hpp  MainMenuState.cpp  MainMenuState.hpp  StateIncludes.hpp
src/main/: main.cpp
